@@ -45,6 +45,19 @@ exports.open = function (path, flags, charset) {
     }
 };
 
+exports.remove = function (path) {
+    path = String(path);
+    var done = Q.defer();
+    FS.unlink(path, function (error) {
+        if (error) {
+            done.reject(error);
+        } else {
+            done.resolve();
+        }
+    });
+    return done.promise;
+};
+
 /**
  */
 exports.list = function (path) {
@@ -64,26 +77,112 @@ exports.list = function (path) {
  * @returns {Promise * Stat}
  */
 exports.stat = function (path) {
+    path = String(path);
     var deferred = Q.defer();
     try {
         FS.stat(path, function (error, stat) {
-            if (error)
+            if (error) {
                 deferred.reject(error);
-            else
+            } else {
                 deferred.resolve(stat);
+            }
         });
-    } catch (exception) {
-        deferred.reject({
-            "message": "stat",
-            "path": path,
-            "cause": exception
-        })
+    } catch (error) {
+        deferred.reject(error);
+    }
+    return deferred.promise;
+};
+
+exports.statLink = function (path) {
+    path = String(path);
+    var deferred = Q.defer();
+    try {
+        FS.lstat(path, function (error, stat) {
+            if (error) {
+                deferred.reject(error);
+            } else {
+                deferred.resolve(stat);
+            }
+        });
+    } catch (error) {
+        deferred.reject(error);
+    }
+    return deferred.promise;
+};
+
+exports.statFd = function (fd) {
+    fd = Number(fd);
+    var deferred = Q.defer();
+    try {
+        FS.fstat(fd, function (error, stat) {
+            if (error) {
+                deferred.reject(error);
+            } else {
+                deferred.resolve(stat);
+            }
+        });
+    } catch (error) {
+        deferred.reject(error);
+    }
+    return deferred.promise;
+};
+
+exports.link = function (source, target) {
+    source = String(source);
+    target = String(target);
+    var deferred = Q.defer();
+    try {
+        FS.link(source, target, function (error) {
+            if (error) {
+                deferred.reject(error);
+            } else {
+                deferred.resolve();
+            }
+        });
+    } catch (error) {
+        deferred.reject(error);
+    }
+    return deferred.promise;
+};
+
+exports.chown = function (path, uid, gid) {
+    path = String(path);
+    var deferred = Q.defer();
+    try {
+        FS.chown(path, uid, gid, function (error) {
+            if (error) {
+                deferred.reject(error);
+            } else {
+                deferred.resolve();
+            }
+        });
+    } catch (error) {
+        deferred.reject(error);
+    }
+    return deferred.promise;
+};
+
+exports.chmod = function (path, mode) {
+    path = String(path);
+    mode = String(mode);
+    var deferred = Q.defer();
+    try {
+        FS.chmod(path, mode, function (error) {
+            if (error) {
+                deferred.reject(error);
+            } else {
+                deferred.resolve();
+            }
+        });
+    } catch (error) {
+        deferred.reject(error);
     }
     return deferred.promise;
 };
 
 exports.lastModified = function (path) {
-    var mtime = Q.get(exports.stat(path), 'mtime');
+    var stat = exports.stat(path);
+    var mtime = Q.get(stat, 'mtime');
     return Q.when(mtime, function (mtime) {
         return Date.parse(mtime);
     });
