@@ -2,6 +2,12 @@
 var Q = require("q/util");
 var Root = require("./root").Fs;
 
+// TODO patternToRegExp
+// TODO glob
+// TODO match
+// TODO copyTree
+// TODO makeTree
+
 var concat = function (arrays) {
     return Array.prototype.concat.apply([], arrays);
 };
@@ -14,6 +20,7 @@ exports.update = function (exports, workingDirectory) {
      * @returns {Promise * (String || Buffer)}
      */
     exports.read = function (path, flags, charset) {
+        flags = "r" + (flags || "").replace(/r/g, "");
         return Q.when(exports.open(path, flags, charset), function (stream) {
             return stream.read();
         }, function (reason) {
@@ -40,6 +47,7 @@ exports.update = function (exports, workingDirectory) {
      * when the writing is complete.
      */
     exports.write = function (path, content, flags, charset) {
+        flags = "w" + (flags || "").replace(/w/g, "");
         return Q.when(exports.open(path, flags, charset), function (stream) {
             return Q.when(stream.write(content), function () {
                 return stream.close();
@@ -48,7 +56,17 @@ exports.update = function (exports, workingDirectory) {
     };
 
     // TODO append
-    //
+    exports.append = function (path, content, flags, charset) {
+        flags = "w+" + (flags || "").replace(/[w\+]/g, "");
+        return Q.when(exports.open(path, flags, charset), function (stream) {
+            return Q.when(stream.write(content), function () {
+                return stream.close();
+            });
+        });
+    };
+
+    // TODO copy
+
     /**
      */
     exports.listTree = function (basePath, guard) {
@@ -80,7 +98,54 @@ exports.update = function (exports, workingDirectory) {
             return [];
         }).then(Q.shallow).then(concat);
     };
+    
+    exports.listDirectoryTree = function (path) {
+        return exports.listTree(path, function (path, stat) {
+            return stat.isDirectory();
+        });
+    };
 
+    exports.makeTree = function (path, mode) {
+        var parts = exports.split(path);
+        var at = [exports.ROOT];
+        return parts.reduce(function (parent, part) {
+            at.push(part);
+            var parts = exports.join(at);
+            var made = exports.makeDirectory(parts, mode);
+            return Q.when(made, null, function rejected(reason) {
+                if (parts === path)
+                    throw reason;
+                // ignore already made directories,
+                // except the ultimate
+            });
+        }, undefined);
+    };
+
+    exports.removeTree = function (path) {
+        return Q.when(exports.stat(path), function (stat) {
+            if (stat.isLink()) {
+                return exports.remove(path);
+            } else if (stat.isDirectory()) {
+                var list = exports.list(path);
+                return Q.when(list, function (list) {
+                    // asynchronously remove every subtree
+                    var done = list.reduce(function (prev, name) {
+                        var child = exports.join(path, name);
+                        var next = exports.removeTree(child);
+                        // join next and prev
+                        return Q.when(prev, function () {
+                            return next;
+                        });
+                    });
+                    return Q.when(done, function () {
+                        exports.removeDirectory(path);
+                    });
+                });
+            } else {
+                return exports.remove(path);
+            }
+        });
+    };
 
     exports.exists = function (path) {
         return Q.when(exports.stat(path), function () {
@@ -193,8 +258,8 @@ exports.update = function (exports, workingDirectory) {
         });
     }
 
-    exports.toObject = function () {
-        var list = exports.listTree("", function (path, stat) {
+    exports.toObject = function (path) {
+        var list = exports.listTree(path || "", function (path, stat) {
             return stat.isFile();
         });
         return Q.when(list, function (list) {
